--- a/firstboot.yml
+++ b/firstboot.yml
@@ -23,3 +23,8 @@
     user:
       name: pirate
       password: "{{ pirate_password }}"
+  
+  - name: Generate /etc/hosts file
+    template:
+      src: hosts.j2
+      dest: /etc/hosts
